hover fix on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,7 @@
 
 * {
     font-family: "Inter", sans-serif !important;
-    
+    -webkit-tap-highlight-color: transparent;
 }
 
 :root {
@@ -32,22 +32,13 @@ button {
     cursor: pointer;
 }
 
-/* Увеличение при hover */
-button:hover {
-    transform: scale(1.1);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
 
-/* Уменьшение при нажатии */
-button:active {
-    transform: scale(0.95);
-}
 
 
 
 #nav li a {
     display: inline-block;
-    color: var(--font-color);
+    color: var(--third-color);
     background: linear-gradient(currentColor 0 0)
     bottom left/
     var(--underline-width, 0%) 0.1em
@@ -56,14 +47,29 @@ button:active {
     transition: transform 0.2s ease, box-shadow 0.2s ease, background-size 0.5s;
     user-select: none;
     cursor: pointer;
+    margin-right: 50px;
     
 }
-
-
-#nav li a:hover {
-    transform: scale(1.1);
-    --underline-width: 100%;
+@media (hover:hover) {
+    
+    /* Увеличение при hover */
+    button:hover {
+        transform: scale(1.1);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    
+    #nav li a:hover {
+        
+        --underline-width: 100%;
+    }
 }
+
+
+/* Уменьшение при нажатии */
+button:active {
+    transform: scale(0.95);
+}
+
 
 #nav li a:active {
     transform: scale(0.95);
